--- a/arch/arm64/boot/dts/rockchip/rk3566-radxa-cm3.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3566-radxa-cm3.dtsi
@@ -14,6 +14,25 @@
 		mmc0 = &sdhci;
 	};
 
+	battery: battery {
+		compatible = "simple-battery";
+		charge-full-design-microamp-hours = <1200000>;
+		charge-term-current-microamp = <100000>;
+		constant-charge-current-max-microamp = <600000>;
+		constant-charge-voltage-max-microvolt = <4200000>;
+		factory-internal-resistance-micro-ohms = <150000>;
+		voltage-max-design-microvolt = <4200000>;
+		voltage-min-design-microvolt = <3200000>;
+
+		ocv-capacity-celsius = <20>;
+		ocv-capacity-table-0 =  <4200000 100>, <4054000 95>, <3984000 90>, <3926000 85>,
+			<3874000 80>, <3826000 75>, <3783000 70>, <3746000 65>,
+			<3714000 60>, <3683000 55>, <3650000 50>, <3628000 45>,
+			<3612000 40>, <3600000 35>, <3587000 30>, <3571000 25>,
+			<3552000 20>, <3525000 15>, <3492000 10>, <3446000 5>,
+			<3400000 0>;
+	};
+
 	leds {
 		compatible = "gpio-leds";
 
@@ -291,6 +310,13 @@
 				};
 			};
 
+		};
+
+		rk817_charger: charger {
+			monitored-battery = <&battery>;
+			rockchip,resistor-sense-micro-ohms = <10000>;
+			rockchip,sleep-enter-current-microamp = <150000>;
+			rockchip,sleep-filter-current-microamp = <50000>;
 		};
 	};
 };
